# str_ph

./: .env.example  .gitignore  3.9  ASSISTANT_USAGE_GUIDE.md  CHANGELOG.md  DEPLOY.md  DEPLOYMENT_SUCCESS.md  ENHANCED_ASSISTANT_README.md  FEATURES_SUMMARY.md  FILES_LIST.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.py  FIXES_LOG.md  GITHUB_SETUP.md  GITHUB_UPDATE_LOG.md  GITHUB_UPLOAD_GUIDE.md  GROQ_INTEGRATION_README.md  HOW_TO_RUN.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PRE_DEPLOYMENT_CHECK.md  PRODUCTS_FIX.md  PROGRAMMING_ASSISTANT_README.md  PROJECT_COMPLETE.md  PROJECT_READY.md  PROJECT_SUMMARY.md  Procfile  QUICK_START.md  README.md  READY_TO_DEPLOY.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_STEP_BY_STEP.md  SECURE_GUIDE.md  STANDALONE_CHAT_INSTRUCTIONS.md  UPDATES_SUMMARY.md  VERSION.txt  app.py  app_clean.py  app_corrected.py  (+89 more)
electron/: main.js  preload.js
my-venv/: pyvenv.cfg
project-venv/: pyvenv.cfg
py311-venv/: pyvenv.cfg
static/: index.html  manifest.json
templates/: 403.html  404.html  500.html  activity_logs.html  add_brand.html  add_category.html  add_customer.html  add_product.html  add_supplier.html  advanced_reports.html  advanced_search.html  audit_logs.html  base.html  brands.html  categories.html  chat.html  chat_history.html  customers.html  database_admin.html  edit_category.html  edit_customer.html  edit_product.html  edit_supplier.html  file_manager.html  index.html  login.html  new_purchase.html  new_sale.html  notifications.html  products.html  purchase_pdf.html  purchases.html  reports.html  returns.html  sales.html  (+6 more)
(+14 files in other folders)
