[metadata]
name = phone-store-app
version = 1.0.0
description = Phone Store Inventory Management System
author = Store Manager
author_email = admin@phonestore.com

[options]
python_requires = >=3.11,<3.13
install_requires =
    Flask>=2.3.0,<4.0.0
    Flask-SQLAlchemy>=3.0.0,<4.0.0
    Werkzeug>=2.3.0,<4.0.0
    Jinja2>=3.1.0,<4.0.0
    Flask-WTF>=1.1.0,<2.0.0
    Flask-Login>=0.6.0,<1.0.0
    python-telegram-bot>=20.0,<21.0
    python-dotenv>=1.0.0,<2.0.0
    reportlab>=4.0.0,<5.0.0
    openpyxl>=3.1.0,<4.0.0
    Pillow>=10.0.0
    gunicorn>=21.0.0,<22.0.0
    psycopg2-binary>=2.9.0,<3.0.0
    WTForms>=3.0.0,<4.0.0